API: Rename start/end to starts_at/ends_at
