# src/Controllers/Api/ShiftsController.php
@@ -77,8 +77,8 @@ class ShiftsController extends ApiController
                 'id' => $shift->id,
                 'title' => $shift->title,
                 'description' => $shift->description,
-                'start' => $shift->start,
-                'end' => $shift->end,
+                'starts_at' => $shift->start,
+                'ends_at' => $shift->end,
                 'location' => $locationData,
                 'shift_type' => $shift->shiftType->only(['id', 'name', 'description']),
                 'created_at' => $shift->created_at,
